--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" media="screen and ( max-width:768px )" href="/static/css/style_sp.css">
 	<title>月木でわかる HTML5 &amp; CSS3</title>
 
+<script type="text/javascript" src="/static/js/script1.js"></script>
 <script type="text/javascript" src="/static/js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.fadethis.min.js"></script>
 <!-- drawer.css -->
