--- a/templates/bbs.html
+++ b/templates/bbs.html
@@ -19,8 +19,11 @@
       <a href="/edit/{{item['id']}}">編集</a>
       <form action="/del" method="post">
         <input type="hidden" name="comment_id" value="{{item['id']}}">
-        <input type="submit" name="delete" value="削除する">
-    </form><br><br>
+        <input type="submit" name="delete" value="削除する" onclick="kakunin()">
+        <div id="btn">ファイルを選択</div>
+        <input type="file" id="files"/>
+        <input type="text" id="filename" placeholder="ここに選択" readonly />
+      </form><br><br>
   </div>
   {% endfor %}
 
